# rag-obsidian-lmstudio

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/rag_obsidian_lmstudio/: __init__.py  chunking.py  cli.py  config.py  errors.py  index.py  lmstudio.py  mcp_server.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_index.py  test_lmstudio.py  test_mcp_server.py  test_smoke.py
