[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-obsidian-lmstudio"
version = "0.1.1"
description = "Fully local RAG over an Obsidian (or any markdown) vault, powered by LM Studio."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "shirokoweb" }]
keywords = ["rag", "obsidian", "lm-studio", "mcp", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "httpx>=0.28,<1",
    "mcp>=1.28,<2",
    "numpy>=1.26,<3",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.3.0",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
]

[project.urls]
Repository = "https://github.com/shirokoweb/rag-obsidian-lmstudio"

[project.scripts]
obsidian-rag = "rag_obsidian_lmstudio.cli:main"
obsidian-rag-mcp = "rag_obsidian_lmstudio.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_obsidian_lmstudio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
disallow_any_generics = false
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["rag_obsidian_lmstudio"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
